# django-drf-vincent-todo

./: Makefile  README.md  pyproject.toml
api/: urls.py  views.py
project/: settings.py
